--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mashing-up",
+  "name": "beyond-millennials-2020",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,18 +9,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "ansi-colors": "^4.1.1",
-    "beeper": "^2.0.0",
     "gulp": "^4.0.2",
-    "npm-check-updates": "^3.1.15"
+    "npm-check-updates": "^3.1.23"
   },
   "devDependencies": {
-    "gulp-autoprefixer": "^6.1.0",
+    "gulp-autoprefixer": "^7.0.0",
     "gulp-jshint": "^2.1.0",
     "gulp-plumber": "^1.2.1",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-touch": "^1.0.1",
+    "gulp-util": "^3.0.8",
     "jshint": "^2.10.2",
     "jslint": "^0.12.1",
     "node-sass": "^4.12.0",
